Allow adding blocks to safebreak